package maidsafe.protobuf;
option optimize_for = LITE_RUNTIME;

message StructuredDataVersions {
  message VersionName {
    required uint64 index = 1;
    required bytes id = 2;
  }
  message Branch {
    optional VersionName parent = 1;
    repeated VersionName name = 2;
  }
  required uint32 max_versions = 1;
  required uint32 max_branches = 2;
  repeated Branch branch = 3;
}
